ipc test benchmark: x86 64 bit

--- a/apps/manager/Makefile
+++ b/apps/manager/Makefile
@@ -40,7 +40,7 @@ endif
 
 # extra cflag for manager
 CFLAGS += -Werror -g -Wno-unused-function -I $(SOURCE_DIR)/../
-ifdef CONFIG_X86_64
+ifdef CONFIG_ARCH_X86_64
 CFLAGS += -mno-sse
 endif
 
