ipc benchmark ARM

--- a/apps/side-bench/Makefile
+++ b/apps/side-bench/Makefile
@@ -15,6 +15,15 @@ TARGETS := $(notdir $(SOURCE_DIR)).bin
 # whoever loads us will
 LDFLAGS += -u __vsyscall_ptr 
 
+#include directory
+ifdef CONFIG_ARCH_AARCH32
+SIDEBENCH_INCLUDE := $(SOURCE_DIR)/arch_include/aarch32/
+endif
+
+ifdef CONFIG_ARCH_X86_64
+SIDEBENCH_INCLUDE := $(SOURCE_DIR)/arch_include/x86_64/
+endif
+
 #asm files
 ASMFILES :=  $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.S))
 ifdef CONFIG_ARCH_X86
@@ -40,7 +49,7 @@ endif
 CFILES +=  $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/mastik_common/*.c))
 
 
-CFLAGS += -DDBG_MEMORY=0 -I $(SOURCE_DIR)/src/ -I $(SOURCE_DIR)/src/mastik_common/ -I $(SOURCE_DIR)/../ 
+CFLAGS += -DDBG_MEMORY=0 -I $(SOURCE_DIR)/src/ -I $(SOURCE_DIR)/src/mastik_common/ -I $(SOURCE_DIR)/../ -I $(SIDEBENCH_INCLUDE)
 
 
 # Libraries
