--- a/configs/sabre_l1d_cache_flush_defconfig
+++ b/configs/sabre_l1d_cache_flush_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Thu May  3 11:10:17 2018
+# Tue Jun 12 14:00:22 2018
 #
 
 #
@@ -19,6 +19,7 @@ CONFIG_WORD_SIZE=32
 #
 # CONFIG_ARCH_X86 is not set
 CONFIG_ARCH_ARM=y
+# CONFIG_ARCH_RISCV is not set
 # CONFIG_ARCH_AARCH64 is not set
 CONFIG_ARCH_AARCH32=y
 # CONFIG_ARM1136JF_S is not set
@@ -57,7 +58,7 @@ CONFIG_IPC_BUF_TPIDRURW=y
 #
 # seL4 System Parameters
 #
-CONFIG_ROOT_CNODE_SIZE_BITS=16
+CONFIG_ROOT_CNODE_SIZE_BITS=19
 CONFIG_TIMER_TICK_MS=1
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
@@ -77,12 +78,9 @@ CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 # Build Options
 #
 # CONFIG_VERIFICATION_BUILD is not set
-CONFIG_DEBUG_BUILD=y
-CONFIG_PRINTING=y
+# CONFIG_DEBUG_BUILD is not set
+# CONFIG_PRINTING is not set
 # CONFIG_HARDWARE_DEBUG_API is not set
-CONFIG_IRQ_REPORTING=y
-CONFIG_COLOUR_PRINTING=y
-CONFIG_USER_STACK_TRACE_LENGTH=16
 # CONFIG_OPTIMISATION_Os is not set
 # CONFIG_OPTIMISATION_O0 is not set
 # CONFIG_OPTIMISATION_O1 is not set
@@ -90,10 +88,8 @@ CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_DEBUG_DISABLE_L2_CACHE is not set
-# CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
-# CONFIG_FLUSH_CACHE_ALL is not set
-# CONFIG_FLUSH_TLB_ALL is not set
-# CONFIG_FLUSH_BTAC is not set
+CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION=y
+CONFIG_FLUSH_CORE_STATES=y
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
@@ -118,18 +114,16 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
+CONFIG_BENCH_COVERT=y
 CONFIG_BENCH_COVERT_L1D=y
 # CONFIG_BENCH_COVERT_L1I is not set
-# CONFIG_BENCH_COVERT_L2 is not set
 # CONFIG_BENCH_COVERT_LLC is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 # CONFIG_BENCH_COVERT_TIMER is not set
-CONFIG_BENCH_DATA_POINTS=1024
+CONFIG_BENCH_DATA_POINTS=1024000
 # CONFIG_BENCH_COVERT_L1D_WRITE is not set
 # CONFIG_MASTIK_ATTACK is not set
 
@@ -145,8 +139,6 @@ CONFIG_BENCH_UNTYPE_SIZEBITS=14
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
-# CONFIG_COVERT_TROJAN_SENSITIVE is not set
-# CONFIG_COVERT_SPY_SENSITIVE is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
@@ -168,7 +160,7 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=1048576
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=20971520
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
 CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS=y
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
@@ -192,7 +184,6 @@ CONFIG_SEL4UTILS_CSPACE_SIZE_BITS=8
 # CONFIG_SEL4UTILS_PROFILE is not set
 CONFIG_HAVE_LIB_SEL4_UTILS=y
 CONFIG_LIB_SEL4_PLAT_SUPPORT=y
-CONFIG_LIB_SEL4_PLAT_SUPPORT_USE_SEL4_DEBUG_PUTCHAR=y
 # CONFIG_LIB_SEL4_PLAT_SUPPORT_START is not set
 CONFIG_LIB_SEL4_PLAT_SUPPORT_SEL4_START=y
 CONFIG_HAVE_LIB_SEL4_PLAT_SUPPORT=y
@@ -212,7 +203,7 @@ CONFIG_HAVE_LIB_PLATSUPPORT=y
 CONFIG_LIB_SEL4_CACHECOLOURING=y
 CONFIG_NUM_CACHE_COLOURS=16
 CONFIG_COLOUR_ALLOC_SIZEBITS=16
-CONFIG_COLOUR_MSPACE_RESERVES=10
+CONFIG_COLOUR_MSPACE_RESERVES=30
 CONFIG_LIB_SEL4_DEBUG=y
 CONFIG_LIBSEL4DEBUG_ALLOC_BUFFER_ENTRIES=128
 CONFIG_LIBSEL4DEBUG_FUNCTION_INSTRUMENTATION_NONE=y
