--- a/configs/sabre_l1d_defconfig
+++ b/configs/sabre_l1d_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Fri Jun  8 15:50:43 2018
+# Tue Jun 12 13:49:44 2018
 #
 
 #
@@ -50,7 +50,7 @@ CONFIG_PLAT_SABRE=y
 # CONFIG_PLAT_TK1 is not set
 # CONFIG_PLAT_HIKEY is not set
 # CONFIG_PLAT_BCM2837 is not set
-# CONFIG_ENABLE_A9_PREFETCHER is not set
+CONFIG_ENABLE_A9_PREFETCHER=y
 CONFIG_EXPORT_PMU_USER=y
 # CONFIG_IPC_BUF_GLOBALS_FRAME is not set
 CONFIG_IPC_BUF_TPIDRURW=y
