update sabre L1 I config

--- a/configs/sabre_l1i_cache_flush_defconfig
+++ b/configs/sabre_l1i_cache_flush_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Wed Jul 26 14:38:47 2017
+# Tue Jun 12 14:20:45 2018
 #
 
 #
@@ -10,7 +10,7 @@
 # CONFIG_ARCH_ARM_V6 is not set
 CONFIG_ARCH_ARM_V7A=y
 # CONFIG_ARCH_ARM_V8A is not set
-# CONFIG_HAVE_FPU is not set
+CONFIG_HAVE_FPU=y
 CONFIG_KERNEL_MASTER=y
 CONFIG_WORD_SIZE=32
 
@@ -19,6 +19,7 @@ CONFIG_WORD_SIZE=32
 #
 # CONFIG_ARCH_X86 is not set
 CONFIG_ARCH_ARM=y
+# CONFIG_ARCH_RISCV is not set
 # CONFIG_ARCH_AARCH64 is not set
 CONFIG_ARCH_AARCH32=y
 # CONFIG_ARM1136JF_S is not set
@@ -44,6 +45,7 @@ CONFIG_PLAT_SABRE=y
 # CONFIG_PLAT_WANDQ is not set
 # CONFIG_PLAT_IMX7_SABRE is not set
 # CONFIG_PLAT_ZYNQ7000 is not set
+# CONFIG_PLAT_ZYNQMP is not set
 # CONFIG_PLAT_ALLWINNERA20 is not set
 # CONFIG_PLAT_TK1 is not set
 # CONFIG_PLAT_HIKEY is not set
@@ -57,10 +59,11 @@ CONFIG_IPC_BUF_TPIDRURW=y
 # seL4 System Parameters
 #
 CONFIG_ROOT_CNODE_SIZE_BITS=19
-CONFIG_TIMER_TICK_MS=2
+CONFIG_TIMER_TICK_MS=1
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
+CONFIG_RESET_CHUNK_BITS=8
 CONFIG_MAX_NUM_BOOTINFO_UNTYPED_CAPS=256
 # CONFIG_FASTPATH is not set
 CONFIG_NUM_DOMAINS=1
@@ -68,6 +71,8 @@ CONFIG_DOMAIN_SCHEDULE=""
 CONFIG_NUM_PRIORITIES=256
 CONFIG_MAX_NUM_NODES=1
 CONFIG_KERNEL_STACK_BITS=12
+CONFIG_AARCH32_FPU_ENABLE_CONTEXT_SWITCH=y
+CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 
 #
 # Build Options
@@ -84,15 +89,14 @@ CONFIG_OPTIMISATION_O2=y
 CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_DEBUG_DISABLE_L2_CACHE is not set
 CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION=y
-CONFIG_FLUSH_CACHE_ALL=y
-CONFIG_FLUSH_TLB_ALL=y
-CONFIG_FLUSH_BTAC=y
+CONFIG_FLUSH_CORE_STATES=y
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
 # CONFIG_BENCHMARK_TRACK_KERNEL_ENTRIES is not set
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
+# CONFIG_MULTI_KERNEL_IMAGES is not set
 
 #
 # Errata
@@ -106,43 +110,36 @@ CONFIG_NO_BENCHMARKS=y
 # Timing Channel Benchmarks
 #
 CONFIG_APP_SIDE_BENCH=y
-CONFIG_BENCH_CACHE_LINE_SIZE=32
 # CONFIG_BENCH_CACHE_FLUSH is not set
-# CONFIG_BENCH_CACHE_FLUSH_READ is not set
-CONFIG_BENCH_CACH_FLUSH_NONE=y
-# CONFIG_BENCH_CACHE_FLUSH_L1D is not set
-# CONFIG_BENCH_CACHE_FLUSH_L1I is not set
-# CONFIG_BENCH_CACHE_FLUSH_ALL is not set
 # CONFIG_BENCH_DCACHE_ATTACK is not set
-# CONFIG_BENCH_ICACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
+CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_L1D is not set
 CONFIG_BENCH_COVERT_L1I=y
-# CONFIG_BENCH_COVERT_L2 is not set
 # CONFIG_BENCH_COVERT_LLC is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
-CONFIG_BENCH_DATA_POINTS=512000
+# CONFIG_BENCH_COVERT_TIMER is not set
+CONFIG_BENCH_DATA_POINTS=1024000
 # CONFIG_BENCH_COVERT_L1I_REWRITE is not set
+# CONFIG_BENCH_COVERT_L1I_PROB_VADDR is not set
 # CONFIG_MASTIK_ATTACK is not set
 
 #
 # Manager task for benchmarking tests
 #
 CONFIG_APP_MANAGER=y
+CONFIG_BENCH_UNTYPE_COUNT=40
+CONFIG_BENCH_UNTYPE_SIZEBITS=14
+# CONFIG_MANAGER_MITIGATION is not set
 # CONFIG_MANAGER_IPC is not set
-CONFIG_MANAGER_PMU_COUNTER=y
+# CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
-# CONFIG_MANAGER_COVERT_MITIGATION is not set
-# CONFIG_COVERT_TROJAN_SENSITIVE is not set
-# CONFIG_COVERT_SPY_SENSITIVE is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
@@ -164,9 +161,9 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=41943040
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=20971520
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
-# CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS is not set
+CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS=y
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
 CONFIG_HAVE_LIB_SEL4_MUSLC_SYS=y
 CONFIG_LIB_SEL4_VKA=y
@@ -200,6 +197,7 @@ CONFIG_LIB_SEL4_SIMPLE_DEFAULT=y
 CONFIG_HAVE_LIB_SEL4_SIMPLE_DEFAULT=y
 CONFIG_LIB_UTILS=y
 # CONFIG_LIB_UTILS_NO_STATIC_ASSERT is not set
+CONFIG_LIB_UTILS_DEFAULT_ZF_LOG_LEVEL=5
 CONFIG_HAVE_LIB_UTILS=y
 CONFIG_LIB_PLATSUPPORT=y
 CONFIG_HAVE_LIB_PLATSUPPORT=y
@@ -223,6 +221,8 @@ CONFIG_IMAGE_ELF=y
 # CONFIG_ARM_NS_SUPERVISOR_MODE is not set
 CONFIG_ARM_S_SUPERVISOR_MODE=y
 # CONFIG_ARM_MONITOR_MODE is not set
+CONFIG_REMOVE_SYMBOLS=y
+# CONFIG_HASH_INSTRUCTIONS is not set
 # CONFIG_ARM_MONITOR_HOOK is not set
 CONFIG_ARM_ERRATA_764369=y
 
@@ -236,7 +236,7 @@ CONFIG_KERNEL_CFLAGS=""
 CONFIG_KERNEL_EXTRA_CPPFLAGS=""
 CONFIG_USER_COMPILER=""
 # CONFIG_USER_DEBUG_INFO is not set
-CONFIG_USER_EXTRA_CFLAGS=""
+CONFIG_USER_EXTRA_CFLAGS="-D_XOPEN_SOURCE=700 -Wl,-z,max-page-size=0x1000"
 CONFIG_USER_CFLAGS=""
 CONFIG_BUILDSYS_USE_CCACHE=y
 # CONFIG_USER_OPTIMISATION_Os is not set
