--- a/configs/sabre_btb_defconfig
+++ b/configs/sabre_btb_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Mon May 21 15:26:22 2018
+# Tue Jun 12 14:56:17 2018
 #
 
 #
@@ -19,6 +19,7 @@ CONFIG_WORD_SIZE=32
 #
 # CONFIG_ARCH_X86 is not set
 CONFIG_ARCH_ARM=y
+# CONFIG_ARCH_RISCV is not set
 # CONFIG_ARCH_AARCH64 is not set
 CONFIG_ARCH_AARCH32=y
 # CONFIG_ARM1136JF_S is not set
@@ -49,7 +50,7 @@ CONFIG_PLAT_SABRE=y
 # CONFIG_PLAT_TK1 is not set
 # CONFIG_PLAT_HIKEY is not set
 # CONFIG_PLAT_BCM2837 is not set
-# CONFIG_ENABLE_A9_PREFETCHER is not set
+CONFIG_ENABLE_A9_PREFETCHER=y
 CONFIG_EXPORT_PMU_USER=y
 # CONFIG_IPC_BUF_GLOBALS_FRAME is not set
 CONFIG_IPC_BUF_TPIDRURW=y
@@ -88,20 +89,14 @@ CONFIG_OPTIMISATION_O2=y
 CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_DEBUG_DISABLE_L2_CACHE is not set
 # CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
-# CONFIG_FLUSH_CACHE_ALL is not set
-# CONFIG_FLUSH_TLB_ALL is not set
-# CONFIG_FLUSH_BTAC is not set
+# CONFIG_FLUSH_CORE_STATES is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
 # CONFIG_BENCHMARK_TRACK_KERNEL_ENTRIES is not set
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
-CONFIG_MULTI_KERNEL_IMAGES=y
-CONFIG_KERNEL_SWITCH_FLUSH=y
-CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
-CONFIG_KERNEL_HOLD_TICK_LENGTH=850
-CONFIG_LOAD_KERNEL_SHARED_DATA=y
+# CONFIG_MULTI_KERNEL_IMAGES is not set
 
 #
 # Errata
@@ -119,18 +114,16 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
+CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_L1D is not set
 # CONFIG_BENCH_COVERT_L1I is not set
-# CONFIG_BENCH_COVERT_L2 is not set
 # CONFIG_BENCH_COVERT_LLC is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 CONFIG_BENCH_COVERT_BTB=y
 # CONFIG_BENCH_COVERT_BP is not set
 # CONFIG_BENCH_COVERT_TIMER is not set
-CONFIG_BENCH_DATA_POINTS=1024
+CONFIG_BENCH_DATA_POINTS=1024000
 # CONFIG_MASTIK_ATTACK is not set
 
 #
