x86 timing channel config update

--- a/configs/haswell_bp_cache_flush_defconfig
+++ b/configs/haswell_bp_cache_flush_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Mon Aug  7 19:00:25 2017
+# Wed Jun 13 13:57:13 2018
 #
 
 #
@@ -19,6 +19,7 @@ CONFIG_WORD_SIZE=64
 #
 CONFIG_ARCH_X86=y
 # CONFIG_ARCH_ARM is not set
+# CONFIG_ARCH_RISCV is not set
 CONFIG_ARCH_X86_64=y
 # CONFIG_ARM1136JF_S is not set
 # CONFIG_ARM_CORTEX_A7 is not set
@@ -45,8 +46,8 @@ CONFIG_X2APIC=y
 # CONFIG_VTX is not set
 CONFIG_HUGE_PAGE=y
 CONFIG_SUPPORT_PCID=y
-CONFIG_SYSENTER=y
-# CONFIG_SYSCALL is not set
+# CONFIG_SYSENTER is not set
+CONFIG_SYSCALL=y
 CONFIG_FXSAVE=y
 # CONFIG_XSAVE is not set
 CONFIG_XSAVE_SIZE=512
@@ -56,9 +57,19 @@ CONFIG_FSGSBASE_INST=y
 #
 # Multiboot options
 #
+CONFIG_MULTIBOOT1_HEADER=y
+CONFIG_MULTIBOOT2_HEADER=y
 CONFIG_MULTIBOOT_GRAPHICS_MODE_NONE=y
 # CONFIG_MULTIBOOT_GRAPHICS_MODE_TEXT is not set
 # CONFIG_MULTIBOOT_GRAPHICS_MODE_LINEAR is not set
+# CONFIG_KERNEL_SKIM_WINDOW is not set
+# CONFIG_EXPORT_PMC_USER is not set
+# CONFIG_KERNEL_X86_DANGEROUS_MSR is not set
+# CONFIG_KERNEL_X86_IBRS_NONE is not set
+CONFIG_KERNEL_X86_IBRS_BASIC=y
+# CONFIG_KERNEL_X86_IBRS_ALL is not set
+CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH=y
+CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH=y
 
 #
 # seL4 System Parameters
@@ -68,6 +79,7 @@ CONFIG_TIMER_TICK_MS=1
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
+CONFIG_RESET_CHUNK_BITS=8
 CONFIG_MAX_NUM_BOOTINFO_UNTYPED_CAPS=256
 # CONFIG_FASTPATH is not set
 CONFIG_NUM_DOMAINS=1
@@ -91,12 +103,7 @@ CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
-CONFIG_FLUSH_CACHE_ALL=y
-# CONFIG_FLUSH_CACHE_L1_DCACHE is not set
-# CONFIG_FLUSH_CACHE_L1_ICACHE is not set
-CONFIG_FLUSH_TLB_ALL=y
-# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
-# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
+CONFIG_FLUSH_CORE_STATES=y
 CONFIG_DEBUG_DISABLE_PREFETCHERS=y
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
@@ -118,43 +125,35 @@ CONFIG_NO_BENCHMARKS=y
 # Timing Channel Benchmarks
 #
 CONFIG_APP_SIDE_BENCH=y
-CONFIG_BENCH_CACHE_LINE_SIZE=64
 # CONFIG_BENCH_CACHE_FLUSH is not set
-# CONFIG_BENCH_CACHE_FLUSH_READ is not set
-CONFIG_BENCH_CACH_FLUSH_NONE=y
-# CONFIG_BENCH_CACHE_FLUSH_L1D is not set
-# CONFIG_BENCH_CACHE_FLUSH_L1I is not set
-# CONFIG_BENCH_CACHE_FLUSH_ALL is not set
 # CONFIG_BENCH_DCACHE_ATTACK is not set
-# CONFIG_BENCH_ICACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
+CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_L1D is not set
 # CONFIG_BENCH_COVERT_L1I is not set
 # CONFIG_BENCH_COVERT_L2 is not set
-# CONFIG_BENCH_COVERT_LLC is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 # CONFIG_BENCH_COVERT_TLB is not set
-CONFIG_BENCH_COVERT_BTB=y
-# CONFIG_BENCH_COVERT_BP is not set
-CONFIG_BENCH_DATA_POINTS=2048000
-# CONFIG_BENCH_BRANCH_ALIGN is not set
+# CONFIG_BENCH_COVERT_BTB is not set
+CONFIG_BENCH_COVERT_BP=y
+# CONFIG_BENCH_COVERT_TIMER is not set
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
+CONFIG_BENCH_DATA_POINTS=1024000
 # CONFIG_MASTIK_ATTACK is not set
 
 #
 # Manager task for benchmarking tests
 #
 CONFIG_APP_MANAGER=y
+CONFIG_BENCH_UNTYPE_COUNT=40
+CONFIG_BENCH_UNTYPE_SIZEBITS=14
+# CONFIG_MANAGER_MITIGATION is not set
 # CONFIG_MANAGER_IPC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
-# CONFIG_MANAGER_COVERT_MITIGATION is not set
-# CONFIG_COVERT_TROJAN_SENSITIVE is not set
-# CONFIG_COVERT_SPY_SENSITIVE is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
@@ -212,6 +211,7 @@ CONFIG_LIB_SEL4_SIMPLE_DEFAULT=y
 CONFIG_HAVE_LIB_SEL4_SIMPLE_DEFAULT=y
 CONFIG_LIB_UTILS=y
 # CONFIG_LIB_UTILS_NO_STATIC_ASSERT is not set
+CONFIG_LIB_UTILS_DEFAULT_ZF_LOG_LEVEL=5
 CONFIG_HAVE_LIB_UTILS=y
 CONFIG_LIB_PLATSUPPORT=y
 CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM1=y
