--- a/configs/haswell_tlb_cache_flush_defconfig
+++ b/configs/haswell_tlb_cache_flush_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Sat Jun  2 20:03:03 2018
+# Wed Jun 13 13:55:56 2018
 #
 
 #
@@ -129,19 +129,17 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
+CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_L1D is not set
-CONFIG_BENCH_COVERT_L1I=y
+# CONFIG_BENCH_COVERT_L1I is not set
 # CONFIG_BENCH_COVERT_L2 is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
-# CONFIG_BENCH_COVERT_TLB is not set
+CONFIG_BENCH_COVERT_TLB=y
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 # CONFIG_BENCH_COVERT_TIMER is not set
-CONFIG_BENCH_DATA_POINTS=1024
-# CONFIG_BENCH_COVERT_L1I_REWRITE is not set
-# CONFIG_BENCH_COVERT_L1I_PROB_VADDR is not set
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
+CONFIG_BENCH_DATA_POINTS=1024000
 # CONFIG_MASTIK_ATTACK is not set
 
 #
