--- a/configs/haswell_l1d_colour_defconfig
+++ b/configs/haswell_l1d_colour_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Sun May 13 16:01:57 2018
+# Wed Jun 13 21:06:58 2018
 #
 
 #
@@ -19,6 +19,7 @@ CONFIG_WORD_SIZE=64
 #
 CONFIG_ARCH_X86=y
 # CONFIG_ARCH_ARM is not set
+# CONFIG_ARCH_RISCV is not set
 CONFIG_ARCH_X86_64=y
 # CONFIG_ARM1136JF_S is not set
 # CONFIG_ARM_CORTEX_A7 is not set
@@ -64,11 +65,11 @@ CONFIG_MULTIBOOT_GRAPHICS_MODE_NONE=y
 # CONFIG_KERNEL_SKIM_WINDOW is not set
 # CONFIG_EXPORT_PMC_USER is not set
 # CONFIG_KERNEL_X86_DANGEROUS_MSR is not set
-CONFIG_KERNEL_X86_IBRS_NONE=y
-# CONFIG_KERNEL_X86_IBRS_BASIC is not set
+# CONFIG_KERNEL_X86_IBRS_NONE is not set
+CONFIG_KERNEL_X86_IBRS_BASIC=y
 # CONFIG_KERNEL_X86_IBRS_ALL is not set
-# CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH is not set
-# CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH is not set
+CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH=y
+CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH=y
 
 #
 # seL4 System Parameters
@@ -102,8 +103,7 @@ CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
-# CONFIG_FLUSH_CACHE_ALL is not set
-CONFIG_FLUSH_TLB_ALL=y
+# CONFIG_FLUSH_CORE_STATES is not set
 CONFIG_DEBUG_DISABLE_PREFETCHERS=y
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
@@ -114,7 +114,8 @@ CONFIG_NO_BENCHMARKS=y
 CONFIG_MULTI_KERNEL_IMAGES=y
 CONFIG_KERNEL_SWITCH_FLUSH=y
 # CONFIG_FLUSH_CACHE_L1_DCACHE_WRITE is not set
-# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
+CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
+CONFIG_KERNEL_HOLD_TICK_LENGTH=3450
 CONFIG_LOAD_KERNEL_SHARED_DATA=y
 # CONFIG_INT_TASK_PRIORITY is not set
 # CONFIG_KERNEL_INT_MASK is not set
@@ -136,18 +137,17 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
+CONFIG_BENCH_COVERT=y
 CONFIG_BENCH_COVERT_L1D=y
 # CONFIG_BENCH_COVERT_L1I is not set
 # CONFIG_BENCH_COVERT_L2 is not set
-# CONFIG_BENCH_COVERT_LLC is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 # CONFIG_BENCH_COVERT_TIMER is not set
-CONFIG_BENCH_DATA_POINTS=1024000
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
+CONFIG_BENCH_DATA_POINTS=1024
 # CONFIG_BENCH_COVERT_L1D_WRITE is not set
 # CONFIG_MASTIK_ATTACK is not set
 
@@ -163,8 +163,6 @@ CONFIG_MANAGER_MITIGATION=y
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
-# CONFIG_COVERT_TROJAN_SENSITIVE is not set
-# CONFIG_COVERT_SPY_SENSITIVE is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
