--- a/configs/haswell_ipc_defconfig
+++ b/configs/haswell_ipc_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Mon Apr 30 15:25:09 2018
+# Thu Jun 14 12:02:51 2018
 #
 
 #
@@ -19,6 +19,7 @@ CONFIG_WORD_SIZE=64
 #
 CONFIG_ARCH_X86=y
 # CONFIG_ARCH_ARM is not set
+# CONFIG_ARCH_RISCV is not set
 CONFIG_ARCH_X86_64=y
 # CONFIG_ARM1136JF_S is not set
 # CONFIG_ARM_CORTEX_A7 is not set
@@ -102,10 +103,7 @@ CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
-# CONFIG_FLUSH_CACHE_ALL is not set
-# CONFIG_FLUSH_CACHE_L1_DCACHE is not set
-# CONFIG_FLUSH_CACHE_L1_ICACHE is not set
-# CONFIG_FLUSH_TLB_ALL is not set
+# CONFIG_FLUSH_CORE_STATES is not set
 # CONFIG_DEBUG_DISABLE_PREFETCHERS is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
@@ -114,11 +112,6 @@ CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
 # CONFIG_MULTI_KERNEL_IMAGES is not set
-# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
-# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
-# CONFIG_INT_TASK_PRIORITY is not set
-# CONFIG_KERNEL_INT_MASK is not set
-# CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
 #
 # Errata
@@ -136,7 +129,7 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 CONFIG_BENCH_IPC=y
 # CONFIG_BENCH_PMU_COUNTER is not set
-# CONFIG_BENCH_COVERT_SINGLE is not set
+# CONFIG_BENCH_COVERT is not set
 # CONFIG_MASTIK_ATTACK is not set
 
 #
