update IPC config sabre

--- a/configs/sabre_ipc_defconfig
+++ b/configs/sabre_ipc_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Wed May 30 15:30:41 2018
+# Thu Jun 14 12:08:39 2018
 #
 
 #
@@ -89,19 +89,14 @@ CONFIG_OPTIMISATION_O2=y
 CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_DEBUG_DISABLE_L2_CACHE is not set
 # CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
-# CONFIG_FLUSH_CACHE_ALL is not set
-# CONFIG_FLUSH_TLB_ALL is not set
-# CONFIG_FLUSH_BTAC is not set
+# CONFIG_FLUSH_CORE_STATES is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
 # CONFIG_BENCHMARK_TRACK_KERNEL_ENTRIES is not set
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
-CONFIG_MULTI_KERNEL_IMAGES=y
-# CONFIG_KERNEL_SWITCH_FLUSH is not set
-# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
-# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
+# CONFIG_MULTI_KERNEL_IMAGES is not set
 
 #
 # Errata
@@ -119,7 +114,7 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 CONFIG_BENCH_IPC=y
 # CONFIG_BENCH_PMU_COUNTER is not set
-# CONFIG_BENCH_COVERT_SINGLE is not set
+# CONFIG_BENCH_COVERT is not set
 # CONFIG_MASTIK_ATTACK is not set
 
 #
@@ -128,9 +123,8 @@ CONFIG_BENCH_IPC=y
 CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
-CONFIG_MANAGER_MITIGATION=y
+# CONFIG_MANAGER_MITIGATION is not set
 CONFIG_MANAGER_IPC=y
-# CONFIG_MANAGER_IPC_SAME_COLOUR is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
