--- a/configs/haswell_timer_defconfig
+++ b/configs/haswell_timer_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Tue Mar 13 10:34:12 2018
+# Fri Jun 15 16:31:43 2018
 #
 
 #
@@ -19,6 +19,7 @@ CONFIG_WORD_SIZE=64
 #
 CONFIG_ARCH_X86=y
 # CONFIG_ARCH_ARM is not set
+# CONFIG_ARCH_RISCV is not set
 CONFIG_ARCH_X86_64=y
 # CONFIG_ARM1136JF_S is not set
 # CONFIG_ARM_CORTEX_A7 is not set
@@ -45,8 +46,8 @@ CONFIG_X2APIC=y
 # CONFIG_VTX is not set
 CONFIG_HUGE_PAGE=y
 CONFIG_SUPPORT_PCID=y
-CONFIG_SYSENTER=y
-# CONFIG_SYSCALL is not set
+# CONFIG_SYSENTER is not set
+CONFIG_SYSCALL=y
 CONFIG_FXSAVE=y
 # CONFIG_XSAVE is not set
 CONFIG_XSAVE_SIZE=512
@@ -61,6 +62,14 @@ CONFIG_MULTIBOOT2_HEADER=y
 CONFIG_MULTIBOOT_GRAPHICS_MODE_NONE=y
 # CONFIG_MULTIBOOT_GRAPHICS_MODE_TEXT is not set
 # CONFIG_MULTIBOOT_GRAPHICS_MODE_LINEAR is not set
+# CONFIG_KERNEL_SKIM_WINDOW is not set
+# CONFIG_EXPORT_PMC_USER is not set
+# CONFIG_KERNEL_X86_DANGEROUS_MSR is not set
+CONFIG_KERNEL_X86_IBRS_NONE=y
+# CONFIG_KERNEL_X86_IBRS_BASIC is not set
+# CONFIG_KERNEL_X86_IBRS_ALL is not set
+# CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH is not set
+# CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH is not set
 
 #
 # seL4 System Parameters
@@ -94,14 +103,7 @@ CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
-# CONFIG_INDIRECT_BRANCH_RESTRICTED_SPECULATION is not set
-# CONFIG_INDIRECT_BRANCH_PREDICTION_BARRIER is not set
-# CONFIG_FLUSH_CACHE_ALL is not set
-# CONFIG_FLUSH_CACHE_L1_DCACHE is not set
-# CONFIG_FLUSH_CACHE_L1_ICACHE is not set
-# CONFIG_FLUSH_TLB_ALL is not set
-# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
-# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
+# CONFIG_FLUSH_CORE_STATES is not set
 # CONFIG_DEBUG_DISABLE_PREFETCHERS is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
@@ -109,7 +111,14 @@ CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_TRACK_KERNEL_ENTRIES is not set
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
-# CONFIG_MULTI_KERNEL_IMAGES is not set
+CONFIG_MULTI_KERNEL_IMAGES=y
+CONFIG_KERNEL_SWITCH_FLUSH=y
+# CONFIG_FLUSH_CACHE_L1_DCACHE_WRITE is not set
+# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
+# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
+# CONFIG_INT_TASK_PRIORITY is not set
+CONFIG_KERNEL_INT_MASK=y
+# CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
 #
 # Errata
@@ -123,27 +132,20 @@ CONFIG_NO_BENCHMARKS=y
 # Timing Channel Benchmarks
 #
 CONFIG_APP_SIDE_BENCH=y
-CONFIG_BENCH_CACHE_LINE_SIZE=64
 # CONFIG_BENCH_CACHE_FLUSH is not set
-# CONFIG_BENCH_CACHE_FLUSH_READ is not set
-CONFIG_BENCH_CACH_FLUSH_NONE=y
-# CONFIG_BENCH_CACHE_FLUSH_L1D is not set
-# CONFIG_BENCH_CACHE_FLUSH_L1I is not set
-# CONFIG_BENCH_CACHE_FLUSH_ALL is not set
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
+CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_L1D is not set
 # CONFIG_BENCH_COVERT_L1I is not set
 # CONFIG_BENCH_COVERT_L2 is not set
-# CONFIG_BENCH_COVERT_LLC is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 CONFIG_BENCH_COVERT_TIMER=y
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 CONFIG_BENCH_DATA_POINTS=100
 # CONFIG_MASTIK_ATTACK is not set
 
@@ -153,14 +155,12 @@ CONFIG_BENCH_DATA_POINTS=100
 CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=8
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
+# CONFIG_MANAGER_MITIGATION is not set
 # CONFIG_MANAGER_IPC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
-# CONFIG_MANAGER_COVERT_MITIGATION is not set
-# CONFIG_COVERT_TROJAN_SENSITIVE is not set
-# CONFIG_COVERT_SPY_SENSITIVE is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
@@ -182,7 +182,7 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=41943040
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=8388608
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
 # CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS is not set
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
@@ -218,6 +218,7 @@ CONFIG_LIB_SEL4_SIMPLE_DEFAULT=y
 CONFIG_HAVE_LIB_SEL4_SIMPLE_DEFAULT=y
 CONFIG_LIB_UTILS=y
 # CONFIG_LIB_UTILS_NO_STATIC_ASSERT is not set
+CONFIG_LIB_UTILS_DEFAULT_ZF_LOG_LEVEL=5
 CONFIG_HAVE_LIB_UTILS=y
 CONFIG_LIB_PLATSUPPORT=y
 CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM1=y
@@ -229,7 +230,7 @@ CONFIG_HAVE_LIB_PLATSUPPORT=y
 CONFIG_LIB_SEL4_CACHECOLOURING=y
 CONFIG_NUM_CACHE_COLOURS=8
 CONFIG_COLOUR_ALLOC_SIZEBITS=15
-CONFIG_COLOUR_MSPACE_RESERVES=30
+CONFIG_COLOUR_MSPACE_RESERVES=100
 CONFIG_LIB_SEL4_DEBUG=y
 CONFIG_LIBSEL4DEBUG_ALLOC_BUFFER_ENTRIES=128
 CONFIG_LIBSEL4DEBUG_FUNCTION_INSTRUMENTATION_NONE=y
