--- a/configs/haswell_timer_mitigate_defconfig
+++ b/configs/haswell_timer_mitigate_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Wed Mar 14 10:57:18 2018
+# Fri Jun 15 16:30:06 2018
 #
 
 #
@@ -19,6 +19,7 @@ CONFIG_WORD_SIZE=64
 #
 CONFIG_ARCH_X86=y
 # CONFIG_ARCH_ARM is not set
+# CONFIG_ARCH_RISCV is not set
 CONFIG_ARCH_X86_64=y
 # CONFIG_ARM1136JF_S is not set
 # CONFIG_ARM_CORTEX_A7 is not set
@@ -45,8 +46,8 @@ CONFIG_X2APIC=y
 # CONFIG_VTX is not set
 CONFIG_HUGE_PAGE=y
 CONFIG_SUPPORT_PCID=y
-CONFIG_SYSENTER=y
-# CONFIG_SYSCALL is not set
+# CONFIG_SYSENTER is not set
+CONFIG_SYSCALL=y
 CONFIG_FXSAVE=y
 # CONFIG_XSAVE is not set
 CONFIG_XSAVE_SIZE=512
@@ -61,6 +62,14 @@ CONFIG_MULTIBOOT2_HEADER=y
 CONFIG_MULTIBOOT_GRAPHICS_MODE_NONE=y
 # CONFIG_MULTIBOOT_GRAPHICS_MODE_TEXT is not set
 # CONFIG_MULTIBOOT_GRAPHICS_MODE_LINEAR is not set
+# CONFIG_KERNEL_SKIM_WINDOW is not set
+# CONFIG_EXPORT_PMC_USER is not set
+# CONFIG_KERNEL_X86_DANGEROUS_MSR is not set
+CONFIG_KERNEL_X86_IBRS_NONE=y
+# CONFIG_KERNEL_X86_IBRS_BASIC is not set
+# CONFIG_KERNEL_X86_IBRS_ALL is not set
+# CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH is not set
+# CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH is not set
 
 #
 # seL4 System Parameters
@@ -85,26 +94,16 @@ CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 # Build Options
 #
 # CONFIG_VERIFICATION_BUILD is not set
-CONFIG_DEBUG_BUILD=y
-CONFIG_PRINTING=y
+# CONFIG_DEBUG_BUILD is not set
+# CONFIG_PRINTING is not set
 # CONFIG_HARDWARE_DEBUG_API is not set
-CONFIG_IRQ_REPORTING=y
-CONFIG_COLOUR_PRINTING=y
-CONFIG_USER_STACK_TRACE_LENGTH=16
 # CONFIG_OPTIMISATION_Os is not set
 # CONFIG_OPTIMISATION_O0 is not set
 # CONFIG_OPTIMISATION_O1 is not set
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
-# CONFIG_INDIRECT_BRANCH_RESTRICTED_SPECULATION is not set
-# CONFIG_INDIRECT_BRANCH_PREDICTION_BARRIER is not set
-# CONFIG_FLUSH_CACHE_ALL is not set
-# CONFIG_FLUSH_CACHE_L1_DCACHE is not set
-# CONFIG_FLUSH_CACHE_L1_ICACHE is not set
-# CONFIG_FLUSH_TLB_ALL is not set
-# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
-# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
+# CONFIG_FLUSH_CORE_STATES is not set
 # CONFIG_DEBUG_DISABLE_PREFETCHERS is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
@@ -113,6 +112,13 @@ CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
 CONFIG_MULTI_KERNEL_IMAGES=y
+CONFIG_KERNEL_SWITCH_FLUSH=y
+# CONFIG_FLUSH_CACHE_L1_DCACHE_WRITE is not set
+# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
+# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
+# CONFIG_INT_TASK_PRIORITY is not set
+CONFIG_KERNEL_INT_MASK=y
+# CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
 #
 # Errata
@@ -126,27 +132,20 @@ CONFIG_MULTI_KERNEL_IMAGES=y
 # Timing Channel Benchmarks
 #
 CONFIG_APP_SIDE_BENCH=y
-CONFIG_BENCH_CACHE_LINE_SIZE=64
 # CONFIG_BENCH_CACHE_FLUSH is not set
-# CONFIG_BENCH_CACHE_FLUSH_READ is not set
-CONFIG_BENCH_CACH_FLUSH_NONE=y
-# CONFIG_BENCH_CACHE_FLUSH_L1D is not set
-# CONFIG_BENCH_CACHE_FLUSH_L1I is not set
-# CONFIG_BENCH_CACHE_FLUSH_ALL is not set
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
+CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_L1D is not set
 # CONFIG_BENCH_COVERT_L1I is not set
 # CONFIG_BENCH_COVERT_L2 is not set
-# CONFIG_BENCH_COVERT_LLC is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 CONFIG_BENCH_COVERT_TIMER=y
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 CONFIG_BENCH_DATA_POINTS=100
 # CONFIG_MASTIK_ATTACK is not set
 
@@ -156,14 +155,12 @@ CONFIG_BENCH_DATA_POINTS=100
 CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=8
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
+CONFIG_MANAGER_MITIGATION=y
 # CONFIG_MANAGER_IPC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
-CONFIG_MANAGER_COVERT_MITIGATION=y
-# CONFIG_COVERT_TROJAN_SENSITIVE is not set
-# CONFIG_COVERT_SPY_SENSITIVE is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
@@ -209,7 +206,6 @@ CONFIG_SEL4UTILS_CSPACE_SIZE_BITS=8
 # CONFIG_SEL4UTILS_PROFILE is not set
 CONFIG_HAVE_LIB_SEL4_UTILS=y
 CONFIG_LIB_SEL4_PLAT_SUPPORT=y
-CONFIG_LIB_SEL4_PLAT_SUPPORT_USE_SEL4_DEBUG_PUTCHAR=y
 # CONFIG_LIB_SEL4_PLAT_SUPPORT_START is not set
 CONFIG_LIB_SEL4_PLAT_SUPPORT_SEL4_START=y
 CONFIG_HAVE_LIB_SEL4_PLAT_SUPPORT=y
@@ -222,6 +218,7 @@ CONFIG_LIB_SEL4_SIMPLE_DEFAULT=y
 CONFIG_HAVE_LIB_SEL4_SIMPLE_DEFAULT=y
 CONFIG_LIB_UTILS=y
 # CONFIG_LIB_UTILS_NO_STATIC_ASSERT is not set
+CONFIG_LIB_UTILS_DEFAULT_ZF_LOG_LEVEL=5
 CONFIG_HAVE_LIB_UTILS=y
 CONFIG_LIB_PLATSUPPORT=y
 CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM1=y
