--- a/configs/haswell_kernel_switch_LLC_defconfig
+++ b/configs/haswell_kernel_switch_LLC_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Sun Apr 29 20:58:36 2018
+# Tue Jul  3 15:01:22 2018
 #
 
 #
@@ -19,6 +19,7 @@ CONFIG_WORD_SIZE=64
 #
 CONFIG_ARCH_X86=y
 # CONFIG_ARCH_ARM is not set
+# CONFIG_ARCH_RISCV is not set
 CONFIG_ARCH_X86_64=y
 # CONFIG_ARM1136JF_S is not set
 # CONFIG_ARM_CORTEX_A7 is not set
@@ -45,8 +46,8 @@ CONFIG_X2APIC=y
 # CONFIG_VTX is not set
 CONFIG_HUGE_PAGE=y
 CONFIG_SUPPORT_PCID=y
-CONFIG_SYSENTER=y
-# CONFIG_SYSCALL is not set
+# CONFIG_SYSENTER is not set
+CONFIG_SYSCALL=y
 CONFIG_FXSAVE=y
 # CONFIG_XSAVE is not set
 CONFIG_XSAVE_SIZE=512
@@ -64,11 +65,11 @@ CONFIG_MULTIBOOT_GRAPHICS_MODE_NONE=y
 # CONFIG_KERNEL_SKIM_WINDOW is not set
 # CONFIG_EXPORT_PMC_USER is not set
 # CONFIG_KERNEL_X86_DANGEROUS_MSR is not set
-CONFIG_KERNEL_X86_IBRS_NONE=y
-# CONFIG_KERNEL_X86_IBRS_BASIC is not set
+# CONFIG_KERNEL_X86_IBRS_NONE is not set
+CONFIG_KERNEL_X86_IBRS_BASIC=y
 # CONFIG_KERNEL_X86_IBRS_ALL is not set
-# CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH is not set
-# CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH is not set
+CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH=y
+CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH=y
 
 #
 # seL4 System Parameters
@@ -102,11 +103,7 @@ CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
-# CONFIG_FLUSH_CACHE_ALL is not set
-CONFIG_FLUSH_CACHE_L1_DCACHE=y
-# CONFIG_FLUSH_CACHE_L1_DCACHE_WIRTE is not set
-CONFIG_FLUSH_CACHE_L1_ICACHE=y
-CONFIG_FLUSH_TLB_ALL=y
+# CONFIG_FLUSH_CORE_STATES is not set
 CONFIG_DEBUG_DISABLE_PREFETCHERS=y
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
@@ -115,6 +112,8 @@ CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
 CONFIG_MULTI_KERNEL_IMAGES=y
+CONFIG_KERNEL_SWITCH_FLUSH=y
+# CONFIG_FLUSH_CACHE_L1_DCACHE_WRITE is not set
 # CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
 CONFIG_LOAD_KERNEL_SHARED_DATA=y
 CONFIG_INT_TASK_PRIORITY=y
@@ -140,7 +139,7 @@ CONFIG_BENCH_CACHE_FLUSH_ALL_CACHES=y
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-# CONFIG_BENCH_COVERT_SINGLE is not set
+# CONFIG_BENCH_COVERT is not set
 # CONFIG_MASTIK_ATTACK is not set
 
 #
