--- a/configs/sabre_kernel_switch_llc_defconfig
+++ b/configs/sabre_kernel_switch_llc_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Tue Jul  3 15:09:15 2018
+# Thu May 17 16:53:28 2018
 #
 
 #
@@ -19,7 +19,6 @@ CONFIG_WORD_SIZE=32
 #
 # CONFIG_ARCH_X86 is not set
 CONFIG_ARCH_ARM=y
-# CONFIG_ARCH_RISCV is not set
 # CONFIG_ARCH_AARCH64 is not set
 CONFIG_ARCH_AARCH32=y
 # CONFIG_ARM1136JF_S is not set
@@ -58,8 +57,8 @@ CONFIG_IPC_BUF_TPIDRURW=y
 #
 # seL4 System Parameters
 #
-CONFIG_ROOT_CNODE_SIZE_BITS=16
-CONFIG_TIMER_TICK_MS=1
+CONFIG_ROOT_CNODE_SIZE_BITS=19
+CONFIG_TIMER_TICK_MS=2
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
@@ -89,7 +88,9 @@ CONFIG_OPTIMISATION_O2=y
 CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_DEBUG_DISABLE_L2_CACHE is not set
 # CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
-# CONFIG_FLUSH_CORE_STATES is not set
+# CONFIG_FLUSH_CACHE_ALL is not set
+# CONFIG_FLUSH_TLB_ALL is not set
+# CONFIG_FLUSH_BTAC is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
@@ -100,9 +101,6 @@ CONFIG_MULTI_KERNEL_IMAGES=y
 CONFIG_KERNEL_SWITCH_FLUSH=y
 # CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
 CONFIG_LOAD_KERNEL_SHARED_DATA=y
-CONFIG_INT_TASK_PRIORITY=y
-CONFIG_KERNEL_INT_MASK=y
-CONFIG_KERNEL_SWITCH_COST_BENCH=y
 
 #
 # Errata
@@ -116,14 +114,22 @@ CONFIG_KERNEL_SWITCH_COST_BENCH=y
 # Timing Channel Benchmarks
 #
 CONFIG_APP_SIDE_BENCH=y
-CONFIG_BENCH_CACHE_FLUSH=y
-# CONFIG_BENCH_CACHE_FLUSH_L1_CACHES is not set
-# CONFIG_BENCH_CACHE_FLUSH_L1_CACHES_INSTRUCTION is not set
-CONFIG_BENCH_CACHE_FLUSH_ALL_CACHES=y
+# CONFIG_BENCH_CACHE_FLUSH is not set
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-# CONFIG_BENCH_COVERT is not set
+CONFIG_BENCH_COVERT_SINGLE=y
+# CONFIG_BENCH_COVERT_L1D is not set
+# CONFIG_BENCH_COVERT_L1I is not set
+# CONFIG_BENCH_COVERT_L2 is not set
+# CONFIG_BENCH_COVERT_LLC is not set
+CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE=y
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
+# CONFIG_BENCH_COVERT_TLB is not set
+# CONFIG_BENCH_COVERT_BTB is not set
+# CONFIG_BENCH_COVERT_BP is not set
+# CONFIG_BENCH_COVERT_TIMER is not set
+CONFIG_BENCH_DATA_POINTS=1024000
 # CONFIG_MASTIK_ATTACK is not set
 
 #
@@ -135,9 +141,13 @@ CONFIG_BENCH_UNTYPE_SIZEBITS=14
 CONFIG_MANAGER_MITIGATION=y
 # CONFIG_MANAGER_IPC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
-CONFIG_MANAGER_CACHE_FLUSH=y
+# CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
-# CONFIG_MANAGER_COVERT_BENCH is not set
+CONFIG_MANAGER_COVERT_BENCH=y
+# CONFIG_COVERT_TROJAN_SENSITIVE is not set
+# CONFIG_COVERT_SPY_SENSITIVE is not set
+# CONFIG_MANAGER_DCACHE_ATTACK is not set
+# CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
 #
