--- a/configs/sabre_ipc_colour_defconfig
+++ b/configs/sabre_ipc_colour_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Thu Jun 14 12:04:37 2018
+# Wed Jul 11 14:38:23 2018
 #
 
 #
@@ -100,6 +100,9 @@ CONFIG_MULTI_KERNEL_IMAGES=y
 # CONFIG_KERNEL_SWITCH_FLUSH is not set
 # CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
 # CONFIG_LOAD_KERNEL_SHARED_DATA is not set
+# CONFIG_INT_TASK_PRIORITY is not set
+# CONFIG_KERNEL_INT_MASK is not set
+# CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
 #
 # Errata
