config haswell kernel determinsit scheduling

--- a/configs/haswell_kernel_determin_mitigate_defconfig
+++ b/configs/haswell_kernel_determin_mitigate_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Mon Jun  4 15:38:25 2018
+# Mon Jul 16 16:27:02 2018
 #
 
 #
@@ -104,7 +104,7 @@ CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_FLUSH_CORE_STATES is not set
-# CONFIG_DEBUG_DISABLE_PREFETCHERS is not set
+CONFIG_DEBUG_DISABLE_PREFETCHERS=y
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
@@ -118,7 +118,7 @@ CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
 CONFIG_KERNEL_HOLD_TICK_LENGTH=3450
 CONFIG_LOAD_KERNEL_SHARED_DATA=y
 # CONFIG_INT_TASK_PRIORITY is not set
-# CONFIG_KERNEL_INT_MASK is not set
+CONFIG_KERNEL_INT_MASK=y
 # CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
 #
@@ -137,17 +137,17 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
+CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_L1D is not set
 # CONFIG_BENCH_COVERT_L1I is not set
 # CONFIG_BENCH_COVERT_L2 is not set
 CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE=y
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 # CONFIG_BENCH_COVERT_TIMER is not set
-CONFIG_BENCH_DATA_POINTS=1024
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
+CONFIG_BENCH_DATA_POINTS=1024000
 # CONFIG_MASTIK_ATTACK is not set
 
 #
@@ -163,7 +163,6 @@ CONFIG_MANAGER_MITIGATION=y
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
-# CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
 #
@@ -183,7 +182,7 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=20971520
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=41943040
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
 # CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS is not set
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
