config file haswell intra-core timing channel with cache colouring

--- a/configs/haswell_tlb_colour_defconfig
+++ b/configs/haswell_tlb_colour_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Mon Jul 16 16:37:04 2018
+# Mon Jul 16 16:46:15 2018
 #
 
 #
@@ -138,17 +138,16 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
 CONFIG_BENCH_COVERT=y
-CONFIG_BENCH_COVERT_L1D=y
+# CONFIG_BENCH_COVERT_L1D is not set
 # CONFIG_BENCH_COVERT_L1I is not set
 # CONFIG_BENCH_COVERT_L2 is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_TLB is not set
+CONFIG_BENCH_COVERT_TLB=y
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 # CONFIG_BENCH_COVERT_TIMER is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 CONFIG_BENCH_DATA_POINTS=1024000
-# CONFIG_BENCH_COVERT_L1D_WRITE is not set
 # CONFIG_MASTIK_ATTACK is not set
 
 #
