update config kimage channel  single core mitigate

--- a/configs/haswell_llc_kimage_single_mitigate_defconfig
+++ b/configs/haswell_llc_kimage_single_mitigate_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Fri Jun 22 14:52:52 2018
+# Mon Jul 16 17:07:24 2018
 #
 
 #
@@ -118,7 +118,7 @@ CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
 CONFIG_KERNEL_HOLD_TICK_LENGTH=3450
 CONFIG_LOAD_KERNEL_SHARED_DATA=y
 # CONFIG_INT_TASK_PRIORITY is not set
-# CONFIG_KERNEL_INT_MASK is not set
+CONFIG_KERNEL_INT_MASK=y
 # CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
 #
@@ -163,7 +163,6 @@ CONFIG_MANAGER_MITIGATION=y
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
-# CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
 #
