--- a/configs/sabre_llc_kimage_single_defconfig
+++ b/configs/sabre_llc_kimage_single_defconfig
@@ -1,75 +1,59 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Mon Aug 20 12:01:59 2018
+# Mon Aug 20 11:04:01 2018
 #
 
 #
 # seL4 Kernel
 #
 # CONFIG_ARCH_ARM_V6 is not set
-# CONFIG_ARCH_ARM_V7A is not set
+CONFIG_ARCH_ARM_V7A=y
 # CONFIG_ARCH_ARM_V8A is not set
 CONFIG_HAVE_FPU=y
 CONFIG_KERNEL_MASTER=y
-CONFIG_WORD_SIZE=64
+CONFIG_WORD_SIZE=32
 
 #
 # seL4 System
 #
-CONFIG_ARCH_X86=y
-# CONFIG_ARCH_ARM is not set
+# CONFIG_ARCH_X86 is not set
+CONFIG_ARCH_ARM=y
 # CONFIG_ARCH_RISCV is not set
-CONFIG_ARCH_X86_64=y
+# CONFIG_ARCH_AARCH64 is not set
+CONFIG_ARCH_AARCH32=y
 # CONFIG_ARM1136JF_S is not set
 # CONFIG_ARM_CORTEX_A7 is not set
 # CONFIG_ARM_CORTEX_A8 is not set
-# CONFIG_ARM_CORTEX_A9 is not set
+CONFIG_ARM_CORTEX_A9=y
 # CONFIG_ARM_CORTEX_A15 is not set
 # CONFIG_ARM_CORTEX_A53 is not set
 # CONFIG_ARM_CORTEX_A57 is not set
 # CONFIG_PLAT_EXYNOS5 is not set
 # CONFIG_PLAT_EXYNOS54XX is not set
-# CONFIG_PLAT_IMX6 is not set
+CONFIG_PLAT_IMX6=y
 # CONFIG_PLAT_IMX7 is not set
-CONFIG_PLAT_PC99=y
-
-#
-# System Interrupt Management
-#
-# CONFIG_IRQ_PIC is not set
-CONFIG_IRQ_IOAPIC=y
-CONFIG_MAX_NUM_IOAPIC=1
-# CONFIG_XAPIC is not set
-CONFIG_X2APIC=y
-# CONFIG_IOMMU is not set
-# CONFIG_VTX is not set
-CONFIG_HUGE_PAGE=y
-CONFIG_SUPPORT_PCID=y
-# CONFIG_SYSENTER is not set
-CONFIG_SYSCALL=y
-CONFIG_FXSAVE=y
-# CONFIG_XSAVE is not set
-CONFIG_XSAVE_SIZE=512
-# CONFIG_FSGSBASE_MSR is not set
-CONFIG_FSGSBASE_INST=y
-
-#
-# Multiboot options
-#
-CONFIG_MULTIBOOT1_HEADER=y
-CONFIG_MULTIBOOT2_HEADER=y
-CONFIG_MULTIBOOT_GRAPHICS_MODE_NONE=y
-# CONFIG_MULTIBOOT_GRAPHICS_MODE_TEXT is not set
-# CONFIG_MULTIBOOT_GRAPHICS_MODE_LINEAR is not set
-# CONFIG_KERNEL_SKIM_WINDOW is not set
-# CONFIG_EXPORT_PMC_USER is not set
-# CONFIG_KERNEL_X86_DANGEROUS_MSR is not set
-CONFIG_KERNEL_X86_IBRS_NONE=y
-# CONFIG_KERNEL_X86_IBRS_BASIC is not set
-# CONFIG_KERNEL_X86_IBRS_ALL is not set
-# CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH is not set
-# CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH is not set
+# CONFIG_PLAT_KZM is not set
+# CONFIG_PLAT_OMAP3 is not set
+# CONFIG_PLAT_AM335X is not set
+# CONFIG_PLAT_EXYNOS4 is not set
+# CONFIG_PLAT_EXYNOS5410 is not set
+# CONFIG_PLAT_EXYNOS5422 is not set
+# CONFIG_PLAT_EXYNOS5250 is not set
+# CONFIG_PLAT_APQ8064 is not set
+CONFIG_PLAT_SABRE=y
+# CONFIG_PLAT_WANDQ is not set
+# CONFIG_PLAT_IMX7_SABRE is not set
+# CONFIG_PLAT_ZYNQ7000 is not set
+# CONFIG_PLAT_ZYNQMP is not set
+# CONFIG_PLAT_ALLWINNERA20 is not set
+# CONFIG_PLAT_TK1 is not set
+# CONFIG_PLAT_HIKEY is not set
+# CONFIG_PLAT_BCM2837 is not set
+# CONFIG_ENABLE_A9_PREFETCHER is not set
+CONFIG_EXPORT_PMU_USER=y
+# CONFIG_IPC_BUF_GLOBALS_FRAME is not set
+CONFIG_IPC_BUF_TPIDRURW=y
 
 #
 # seL4 System Parameters
@@ -86,8 +70,8 @@ CONFIG_NUM_DOMAINS=1
 CONFIG_DOMAIN_SCHEDULE=""
 CONFIG_NUM_PRIORITIES=256
 CONFIG_MAX_NUM_NODES=1
-CONFIG_CACHE_LN_SZ=64
 CONFIG_KERNEL_STACK_BITS=12
+CONFIG_AARCH32_FPU_ENABLE_CONTEXT_SWITCH=y
 CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 
 #
@@ -103,8 +87,9 @@ CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
+# CONFIG_DEBUG_DISABLE_L2_CACHE is not set
+# CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
 # CONFIG_FLUSH_CORE_STATES is not set
-# CONFIG_DEBUG_DISABLE_PREFETCHERS is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
@@ -132,7 +117,7 @@ CONFIG_APP_SIDE_BENCH=y
 CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_L1D is not set
 # CONFIG_BENCH_COVERT_L1I is not set
-# CONFIG_BENCH_COVERT_L2 is not set
+# CONFIG_BENCH_COVERT_LLC is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 # CONFIG_BENCH_COVERT_BTB is not set
@@ -174,9 +159,9 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=41943040
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=20971520
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
-# CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS is not set
+CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS=y
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
 CONFIG_HAVE_LIB_SEL4_MUSLC_SYS=y
 CONFIG_LIB_SEL4_VKA=y
@@ -213,15 +198,10 @@ CONFIG_LIB_UTILS=y
 CONFIG_LIB_UTILS_DEFAULT_ZF_LOG_LEVEL=5
 CONFIG_HAVE_LIB_UTILS=y
 CONFIG_LIB_PLATSUPPORT=y
-CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM1=y
-# CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM2 is not set
-# CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM3 is not set
-# CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM4 is not set
-# CONFIG_LIB_PLAT_SUPPORT_SERIAL_TEXT_EGA is not set
 CONFIG_HAVE_LIB_PLATSUPPORT=y
 CONFIG_LIB_SEL4_CACHECOLOURING=y
-CONFIG_NUM_CACHE_COLOURS=8
-CONFIG_COLOUR_ALLOC_SIZEBITS=15
+CONFIG_NUM_CACHE_COLOURS=16
+CONFIG_COLOUR_ALLOC_SIZEBITS=16
 CONFIG_COLOUR_MSPACE_RESERVES=30
 CONFIG_LIB_SEL4_DEBUG=y
 CONFIG_LIBSEL4DEBUG_ALLOC_BUFFER_ENTRIES=128
@@ -233,18 +213,28 @@ CONFIG_HAVE_LIB_SEL4_DEBUG=y
 #
 # Tools
 #
+CONFIG_LIB_ELFLOADER=y
+# CONFIG_IMAGE_BINARY is not set
+CONFIG_IMAGE_ELF=y
+# CONFIG_ARM_NS_SUPERVISOR_MODE is not set
+CONFIG_ARM_S_SUPERVISOR_MODE=y
+# CONFIG_ARM_MONITOR_MODE is not set
+CONFIG_REMOVE_SYMBOLS=y
+# CONFIG_HASH_INSTRUCTIONS is not set
+# CONFIG_ARM_MONITOR_HOOK is not set
+CONFIG_ARM_ERRATA_764369=y
 
 #
 # Toolchain Options
 #
-CONFIG_CROSS_COMPILER_PREFIX=""
+CONFIG_CROSS_COMPILER_PREFIX="arm-none-eabi-"
 # CONFIG_USE_RUST is not set
 CONFIG_KERNEL_COMPILER=""
 CONFIG_KERNEL_CFLAGS=""
 CONFIG_KERNEL_EXTRA_CPPFLAGS=""
 CONFIG_USER_COMPILER=""
 # CONFIG_USER_DEBUG_INFO is not set
-CONFIG_USER_EXTRA_CFLAGS=""
+CONFIG_USER_EXTRA_CFLAGS="-D_XOPEN_SOURCE=700 -Wl,-z,max-page-size=0x1000"
 CONFIG_USER_CFLAGS=""
 CONFIG_BUILDSYS_USE_CCACHE=y
 # CONFIG_USER_OPTIMISATION_Os is not set
@@ -258,11 +248,3 @@ CONFIG_USER_OPTIMISATION_O2=y
 CONFIG_USER_DEBUG_BUILD=y
 # CONFIG_USER_LINKER_GC_SECTIONS is not set
 # CONFIG_BUILDSYS_CPP_SEPARATE is not set
-# CONFIG_ARCH_X86_GENERIC is not set
-CONFIG_ARCH_X86_NEHALEM=y
-# CONFIG_ARCH_X86_WESTMERE is not set
-# CONFIG_ARCH_X86_SANDY is not set
-# CONFIG_ARCH_X86_IVY is not set
-# CONFIG_ARCH_X86_HASWELL is not set
-# CONFIG_ARCH_X86_BROADWELL is not set
-# CONFIG_ARCH_X86_SKYLAKE is not set
