--- a/configs/sabre_splash_fmm_defconfig
+++ b/configs/sabre_splash_fmm_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Sun Sep  2 21:13:12 2018
+# Tue Sep  4 14:56:47 2018
 #
 
 #
@@ -137,6 +137,7 @@ CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
 # CONFIG_MANAGER_MITIGATION is not set
 # CONFIG_MANAGER_COLOUR_ONLY is not set
+# CONFIG_MANAGER_UNCOLOUR_KERNEL is not set
 # CONFIG_MANAGER_IPC is not set
 # CONFIG_MANAGER_CACHE_DIV_UNEVEN is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
@@ -163,7 +164,7 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=10485760
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=20971520
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
 CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS=y
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
