--- a/configs/sabre_splash_fft_defconfig
+++ b/configs/sabre_splash_fft_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Sun Sep  2 12:45:27 2018
+# Fri Sep  7 13:37:48 2018
 #
 
 #
@@ -97,6 +97,7 @@ CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
 # CONFIG_MULTI_KERNEL_IMAGES is not set
+CONFIG_ENABLE_GLOBAL_TIMER=y
 
 #
 # Errata
@@ -116,6 +117,7 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_PMU_COUNTER is not set
 # CONFIG_BENCH_COVERT is not set
 # CONFIG_MASTIK_ATTACK is not set
+CONFIG_BENCH_SPLASH_MORECORE=y
 CONFIG_BENCH_SPLASH=y
 CONFIG_BENCH_SPLASH_FFT=y
 # CONFIG_BENCH_SPLASH_CHOLESKY is not set
@@ -136,7 +138,10 @@ CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
 # CONFIG_MANAGER_MITIGATION is not set
+# CONFIG_MANAGER_COLOUR_ONLY is not set
+# CONFIG_MANAGER_UNCOLOUR_KERNEL is not set
 # CONFIG_MANAGER_IPC is not set
+# CONFIG_MANAGER_CACHE_DIV_UNEVEN is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
@@ -161,7 +166,7 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=10485760
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=2097152
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
 CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS=y
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
@@ -180,7 +185,7 @@ CONFIG_HAVE_LIB_CPIO=y
 CONFIG_LIB_ELF=y
 CONFIG_HAVE_LIB_ELF=y
 CONFIG_LIB_SEL4_UTILS=y
-CONFIG_SEL4UTILS_STACK_SIZE=65536
+CONFIG_SEL4UTILS_STACK_SIZE=1048576
 CONFIG_SEL4UTILS_CSPACE_SIZE_BITS=8
 # CONFIG_SEL4UTILS_PROFILE is not set
 CONFIG_HAVE_LIB_SEL4_UTILS=y
